# hydromath_rs

./: Cargo.toml  example_python.py  hydromath.h  pyproject.toml
src/: c_api.rs  lib.rs  metrics.rs  python.rs  stats.rs
tests/: lib.rs  metrics.rs
