[package]
name = "hydromath"
version = "0.1.0"
authors = ["Andrew MacDonald <andrew@maccas.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
python = ["pyo3", "numpy"]
c-api = []

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true }
