[build-system]
requires = ["maturin>=1.8", "cffi"]
build-backend = "maturin"

[project]
name = "hydromath"
requires-python = ">=3.6"
dependencies = ["cffi"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
